--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -1,3 +1,5 @@
+{% include 'base.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,3 +15,4 @@
     </form>
 </body>
 </html>
+{% endblock content %}
