--- a/templates/delete_review.html
+++ b/templates/delete_review.html
@@ -1,3 +1,5 @@
+{% include 'base.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,3 +11,4 @@
     
 </body>
 </html>
+{% endblock content %}
