--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -1,4 +1,5 @@
 {% include 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
@@ -6,12 +7,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <style>
+    form{
+        margin: 10rem;
+        margin-top: 2rem;
+    }
+    .button1 {
+        background-color: white;
+        color: black;
+        width: 100px;
+        height: 45px;
+        border: 2px solid #2175b9;
+    }
+    .button1 {
+        transition-duration: 0.4s;
+    }
+
+    button:hover {
+        background-color: #3980bb;
+        color: white;
+    }
+    </style>
 </head>
 <body>
     <form action='' method='POST'>
     {% csrf_token %}
-    {{form}}
-    <button type='submit'>submit</button>
+    {{form|crispy}}
+    <button type='submit' class='button1'>submit</button>
     </form>
 </body>
 </html>
