--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -5,41 +5,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body{
-    background-color:  rgb(245, 241, 241);
-}
-.nav {
-    margin: -0.5rem;
-    margin-bottom: 0.5rem;
-    overflow: hidden;
-    background-color: #33232b;
-    min-width: 350px;
-}
-  
-.nav a {
-    float: right;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-    font-size: 17px;
-}
-  
-.nav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-  
-.nav a.active {
-    background-color: #dd32d5da;
-    color: white;
-}
-</style>
-</head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+   <style>
+    body{
+        background-color:  rgb(245, 241, 241);
+    }
+    .nav_bar {
 
-    <div class="nav">
-        <a class="active" href="/">Home</a>
+        margin: -0.5rem;
+        margin-bottom: 0.5rem;
+        overflow: hidden;
+        background-color: #33232b;
+        min-width: 350px;
+    }
+    
+    .nav_bar a {
+        float: right;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 18px 20px;
+        text-decoration: none;
+        font-size: 17px;
+    }
+    
+    .nav_bar a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+    
+    .nav_bar a.active1 {
+        background-color: #dd32d5da;
+        color: white;
+    }
+    #nav_head{
+        float: left;
+        color: white;
+        margin-top: 1.2rem;
+        margin-left: 1.5rem;
+        margin-bottom: -0.01rem;
+        font-family: monospace;
+    }
+    </style>
+</head>
+    <div class="nav_bar">
+        <h2 id='nav_head'> Car Review Site</h3>
+        <a class="active1" href="/">Home</a>
         <a href='/add_car'>Add car</a>
         <a href="/view_reviews">View Reviews</a>
     </div>
