--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -51,7 +51,7 @@
         <h2 id='nav_head'> Car Review Site</h3>
         <a class="active1" href="/">Home</a>
         <a href='/add_car'>Add car</a>
-        <a href="/view_reviews">View Reviews</a>
+        <a href="/view_cars">View Cars</a>
     </div>
 
 </html>
