--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
 	<style>
 	a{
 		color: #cfe0e8;
