--- a/templates/home.html
+++ b/templates/home.html
@@ -143,10 +143,10 @@
 		<div class="col-md">
 			<div class="card text-center text-white down">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Modify Review</h5>
+			  		<h5 class="card-title">All Reviews</h5>
 			  	</div>
 			  	<div class="card-body">
-			    	<h3 class="card-title"><a href='/delete_review'>delete review</a></h3>
+			    	<h3 class="card-title"><a href='/all_reviews'>All reviews</a></h3>
 			  	</div>
 			</div>
 		</div>
